// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> component renders button html element with the correct title 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  padding: 12px 24px;
  border: 0;
  color: #FFFFFF;
  background-color: #036DC1;
}

.emotion-0:hover {
  color: #FFFFFF;
  background-color: #013C6B;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 38%;
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    width: auto;
  }
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="primary-button"
  >
    Primary
  </button>
</div>
`;

exports[`<Button /> component when loading is true renders a spinner dark theme when variant is outlined 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  padding: 12px 24px;
  color: #036DC1;
  background-color: #FFFFFF;
  border: 1px solid #036DC1;
}

.emotion-0:hover {
  color: #013C6B;
  background-color: #FFFFFF;
  border: 1px solid #013C6B;
}

.emotion-0:active {
  color: #013C6B;
  background-color: #FFFFFF;
  border: 1px solid #013C6B;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: #CCE8FF;
  background-color: #FFFFFF;
  border: 1px solid #CCE8FF;
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    width: auto;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  width: 32px;
  height: 32px;
  border: 2px solid #EBECED;
  border-radius: 50%;
  border-top: 2px solid #036DC1;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="undefined-button"
    disabled=""
  >
    Button loading
    <div
      class="emotion-2 emotion-3"
      data-testid="spinner"
      style="margin: auto;"
    >
      <div
        class="emotion-4 emotion-5"
      />
    </div>
  </button>
</div>
`;

exports[`<Button /> component when loading is true renders a spinner light theme 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  padding: 12px 24px;
  border: 0;
  color: #FFFFFF;
  background-color: #036DC1;
}

.emotion-0:hover {
  color: #FFFFFF;
  background-color: #013C6B;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 38%;
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    width: auto;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  width: 32px;
  height: 32px;
  border: 2px solid #FFFFFF;
  border-radius: 50%;
  border-top: 2px solid #036DC1;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="undefined-button"
    disabled=""
  >
    Button loading
    <div
      class="emotion-2 emotion-3"
      data-testid="spinner"
      style="margin: auto;"
    >
      <div
        class="emotion-4 emotion-5"
      />
    </div>
  </button>
</div>
`;
